Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1673

Creating a .ssh directory on the N900 does not get correct rights

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.0.1
    • Qt Creator 1.3.85 (2.0.0-rc1)
    • Remote Linux
    • None
    • 5120a83ee910bba670dad9c76edf4588e7f28d11

    Description

      When trying to deploy a key to the device and the .ssh directory does not exist, Creator will create the directory with 777. Unfortunately the ssh daemon refuses to read authorized_keys in that scenario, hence automatic login does not work.

      If the .ssh directory itself gains correct permissions, then it should work perfectly.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            mkalinow Maurice Kalinowski
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes