Maemo: Fix access rights for remote .ssh directory.

Task-number: QTCREATORBUG-1673